--- a/user/src/main/resources/application.properties
+++ b/user/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.profiles.active=postgresql
 server.forward-headers-strategy=framework
 spring.application.name=user-service
-server.port=0
-eureka.instance.prefer-ip-address=true
+server.port=8081
+#eureka.instance.prefer-ip-address=true
