build test docker

--- a/create-quiz/src/main/resources/application-postgresql.properties
+++ b/create-quiz/src/main/resources/application-postgresql.properties
@@ -1,12 +1,16 @@
-spring.datasource.url=jdbc:postgresql://35.247.179.178:5433/quiz_lab?createDatabaseIfNotExist=true
+#spring.datasource.url=jdbc:postgresql://35.247.179.178:5433/quiz_lab?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:postgresql://localhost:5433/quiz_lab?createDatabaseIfNotExist=true
 spring.datasource.username=postgres
 spring.datasource.password=Abc@123
-eureka.client.service-url.defaultZone=http://35.187.233.83:8762/eureka
-redis.host=34.142.140.20
+#eureka.client.service-url.defaultZone=http://35.187.233.83:8762/eureka
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+redis.host=localhost
+#redis.host=34.142.140.20
 redis.port=6380
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.kafka.bootstrap-servers=35.240.223.239:29093
+#spring.kafka.bootstrap-servers=35.240.223.239:29093
+spring.kafka.bootstrap-servers=localhost:29093
 fe.host=quiz.portlycat.com
