--- a/question/pom.xml
+++ b/question/pom.xml
@@ -11,8 +11,8 @@
     <groupId>com.example</groupId>
     <artifactId>question</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>base-project</name>
-    <description>base-project</description>
+    <name>question-service</name>
+    <description>question-service</description>
     <properties>
         <java.version>17</java.version>
         <mapstruct.version>1.5.3.Final</mapstruct.version>
