--- a/auth/.env
+++ b/auth/.env
@@ -1,4 +1,4 @@
-DATASOURCE_URL=jdbc:postgresql://10.148.0.4:5433/quiz_lab?createDatabaseIfNotExist=true
+DATASOURCE_URL=jdbc:postgresql://postgresdb:5432/quiz_lab?createDatabaseIfNotExist=true
 DATASOURCE_USERNAME=postgres
 DATASOURCE_PASSWORD=Abc@123
-EUREKA_URL=http://10.148.0.2:8762/eureka
+EUREKA_URL=http://localhost:8761/eureka
