--- a/base-project/docker-compose.yaml
+++ b/base-project/docker-compose.yaml
@@ -1,10 +1,16 @@
-version: '3.9'
+version: "3.9"
 services:
-  db:
+  postgresdb:
+    networks: 
+      - multiple_choice
     image: postgres:latest
-    restart: always
+    restart: unless-stopped
     healthcheck:
-      test: [ "CMD-SHELL", "sh -c 'pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}'" ]
+      test:
+        [
+          "CMD-SHELL",
+          "sh -c 'pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}'",
+        ]
       interval: 10s
       timeout: 3s
       retries: 3
@@ -13,22 +19,10 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=Abc@123
     ports:
-      - 5433:5432
+      - "5434:5432"
     volumes:
       - db-data:/var/lib/postgresql/data
-      - ./init_db.sql:/docker-entrypoint-initdb.d/init_db.sql
-#  app:
-#    image: social_media_image:latest
-#    restart: always
-#    container_name: social_media
-#    depends_on:
-#      db:
-#        condition: service_healthy
-#    environment:
-#      - DATASOURCE_URL=jdbc:postgresql://db:5432/social_media?createDatabaseIfNotExist=true
-#      - DATASOURCE_USERNAME=postgres
-#      - DATASOURCE_PASSWORD=20092002
-#    ports:
-#      - 8080:8080
 volumes:
   db-data:
+networks:
+  multiple_choice:
