--- a/join-quiz/src/main/resources/application-env.properties
+++ b/join-quiz/src/main/resources/application-env.properties
@@ -6,3 +6,5 @@ redis.host=${REDIS_HOST}
 redis.port=${REDIS_PORT}
 spring.kafka.bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS}
 fe.host=${FE_HOST}
+
+eureka.instance.prefer-ip-address=true
