--- a/join-quiz/src/main/resources/application-postgresql.properties
+++ b/join-quiz/src/main/resources/application-postgresql.properties
@@ -2,9 +2,10 @@ spring.datasource.url=jdbc:postgresql://localhost:5433/quiz_lab?createDatabaseIf
 spring.datasource.username=postgres
 spring.datasource.password=Abc@123
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-redis.host=34.142.140.20
+redis.host=localhost
 redis.port=6380
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.kafka.bootstrap-servers=localhost:29093
