--- a/quiz/.env
+++ b/quiz/.env
@@ -1,4 +1,4 @@
-DATASOURCE_URL=jdbc:postgresql://10.148.0.4:5433/quiz_lab?createDatabaseIfNotExist=true
+DATASOURCE_URL=jdbc:postgresql://localhost:5434/quiz_lab?createDatabaseIfNotExist=true
 DATASOURCE_USERNAME=postgres
 DATASOURCE_PASSWORD=Abc@123
-EUREKA_URL=http://10.148.0.2:8762/eureka
+EUREKA_URL=http://localhost:8762/eureka
