--- a/user/src/main/resources/application.properties
+++ b/user/src/main/resources/application.properties
@@ -2,4 +2,9 @@ spring.profiles.active=postgresql
 server.forward-headers-strategy=framework
 spring.application.name=user-service
 server.port=8081
-#eureka.instance.prefer-ip-address=true
+eureka.instance.prefer-ip-address=true
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
